--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "formidable": "^1.2.2",
     "fs": "0.0.1-security",
     "fs-extra": "^10.0.0",
-    "path": "^0.12.7"
+    "jest": "^27.0.6",
+    "path": "^0.12.7",
+    "rewire": "^5.0.0"
   },
   "devDependencies": {
     "eslint": "^6.8.0",
